--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
+      href="/logos/vite.svg"
     />
     <meta
       name="viewport"
